Development
	No longer require libxul-embedding on F9
	Remove debian files, add DOCS/tech/javascript.txt
	Added Spanish translation by Festor Wailon Dacoba
0.6.0
	Set start trigger to be based off of media bitrate
		New trigger code works like this
		Test for > 20% and over cache size
		Test for 2 * cache size as long as cache size > 512
		Test for downloaded amount / bitrate > 10
	Trigger at either 20% of media or 2 * cache size whichever is smaller
	Fix compliation problem with xulrunner on Fedora 9
0.5.4
	Fix .h generation problem
	Add support for tv:// type devices
	Change "Windows Media Player Plugin" to "Windows Media Player Plug-in"
0.5.3
	Added Polish translation
	Print Error on unable to launch gnome-mplayer
	Increase URL buffer from 1K to 4K
	Added pt_BR language
	Set Copy Url eariler in the code, so that you can copy the url before 20% buffer
	Fix problem with uninitialized width and height and NP_FULL media
0.5.2
	Add French translation
	Add javascript src attribute
	Fix for BBC radio to work
	Turn off forcing of streaming for flash media
	More work on realplayer emulation
0.5.1
	Implement several WMP controls methods
	Tell the player what URL we are getting the data from via SetURL
	Cleanup K/s display to show only tenths, also make sure we use floating point math
	A K/s info while caching for non-streaming data
	New dbus callback "ReloadPlugins" tells browser to reload its plugin settings
	Allow configuration of plugins by setting from gconf
	In send_signal_when_ready change the sleep to a smaller value and then only try 100 times before dropping out
	Implement PlayPause JS method
	Remove custom dbus dispatcher for Opera, doesn't seem to be needed
	Make sure dbus dispatcher is stopped
	Use private dbus connection
0.5.0
	If mimetype is video/x-flv then mark the media as streaming
	Version sync with gnome-mplayer
	Handle more javascript methods, that allow setting callbacks on events
	Make qtsrc locations work, makes some apple sites work